# latex-parser

./: .gitignore  CHANGELOG.md  default.nix  hie.yaml  latex-parser.cabal  latex-parser.nix  result  test.tex
app/: Main.hs
src/: MyLib.hs  Params.hs
