cabal-version:      2.4
name:               latex-parser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Zarak
maintainer:         7254237+zarak@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
                    , Params

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , HaTeX
                    , req
                    , aeson
                    , optparse-applicative
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010

executable latex-parser
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        latex-parser

    hs-source-dirs:   app
    default-language: Haskell2010
